fix: Wrap long items in mobile menu

--- a/assets/scss/main-menu.scss
+++ b/assets/scss/main-menu.scss
@@ -265,6 +265,8 @@
               text-align: left;
               top: 120px;
               z-index: 1;
+              word-break: break-word;
+              white-space: initial;
 
               .header-nav__submenu_navigation {
                 display: flex;
